# Atlas-Rag

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: README.md  pyproject.toml
apps/api/src/: app.py  config.py  dependencies.py  main.py  middleware.py
apps/api/src/routes/: CLAUDE.md  __init__.py  chats.py  chunks.py  files.py  health.py  projects.py  settings.py  urls.py
apps/api/src/schemas/: auth.py  base.py  chats.py  projects.py
apps/api/src/services/: chats.py  common.py  jobs.py  projects.py  rag.py  rate_limit.py  retrieval.py  supabase.py
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/worker/: README.md  pyproject.toml
apps/worker/src/: celery_app.py  chunking.py  config.py  embeddings.py  partitioning.py  summarization.py  supabase_client.py  tasks.py  worker.py
docs/api/: README.md
docs/architecture/: README.md
docs/decisions/: DECISIONS.md  README.md
examples/sample-docs/: README.md
infra/compose/: docker-compose.yml
infra/docker/: README.md  worker.Dockerfile
infra/sql/: 001_init.sql
scripts/dev/: all.sh  down.sh  load-env.sh  logs.sh  status.sh  up.sh
supabase/: seed.sql
supabase/migrations/: 20260311140000_phase_3_initial_schema.sql  20260311141000_phase_3b_notebooks.sql  20260312103000_phase_5_project_chat_crud_and_llm_settings.sql  20260314110000_phase_7_document_task_id.sql  20260315100000_phase_8_document_partitioning.sql  20260316120000_phase_12_retrieval_settings.sql  20260316143000_phase_12b_document_embedding_status.sql  20260317100000_phase_18_message_feedback.sql  (+2 more)
(+27 files in other folders)
