[project]
name = "atlas-rag-api"
version = "0.1.0"
description = "FastAPI backend for AtlasRAG"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.1,<0.136.0",
  "uvicorn>=0.41.0,<0.42.0",
  "pydantic>=2.11.7,<3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
