[project]
name = "atlas-rag-api"
version = "0.1.0"
description = "FastAPI backend for AtlasRAG"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.6.2,<5.7.0",
  "fastapi>=0.135.1,<0.136.0",
  "uvicorn>=0.41.0,<0.42.0",
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "redis>=7.3.0,<8.0.0",
  "supabase>=2.15.3,<3.0.0",
  "openai>=1.68.2,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
