[project]
name = "atlas-rag-worker"
version = "0.1.0"
description = "Background worker for AtlasRAG"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.6.2,<5.7.0",
  "httpx>=0.28.1,<0.29.0",
  "openai>=1.68.2,<2.0.0",
  "pypdf>=6.6.2,<7.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "redis>=7.3.0,<8.0.0",
  "supabase>=2.15.3,<3.0.0",
  "unstructured>=0.21.5,<0.22.0",
  "pdfminer.six>=20221105",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
